<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="aosip_version">AOSiP version</string>
    <string name="aosip_version_default">Unknown</string>
    <string name="header_category_personalization">UI settings</string>
    <string name="nest_title">OwlsNest</string>
    <string name="aosip_title">AOSiP Settings</string>
    <string name="owlsnest_settings_title">Categories</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="enabled">Enabled</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>
    <string name="switch_bar_on">On</string>
    <string name="switch_bar_off">Off</string>
    <string name="systemui_restart_title">SystemUI restart required</string>
    <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
    <string name="theme_category_title">Theme options</string>
    <string name="statusbar_bar_title">Statusbar</string>
    <string name="statusbar_bar_summary">Adjust various statusbar elements</string>
    <string name="icon_category">Icons</string>
    <string name="battery_category">Battery</string>
    <string name="status_bar_tuner_title">Status bar items</string>
    <string name="status_bar_tuner_summary">Edit status bar icons and options</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="clock_category">Clock</string>
    <string name="status_bar_clock">Clock and Date</string>
    <string name="status_bar_clock_summary">Configure statusbar clock and date appearance</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="kronic_logo_title">DerpFest Logo</string>
    <string name="kronic_logo_summary">Let everyone know that you\'re using DerpFest when they see your screen</string>
    <string name="status_bar_logo_style_title">Custom logo style</string>
    <string name="ticker_category">Ticker</string>
    <string name="ticker_summary">Notification preview in status bar</string>
    <string name="ticker_animation_mode_title">Ticker animation</string>
    <string name="ticker_animation_mode_alpha_fade">Fade</string>
    <string name="ticker_animation_mode_scroll">Scroll</string>
    <string name="ticker_tick_duration_title">Ticker duration</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock and date</string>
    <string name="status_bar_clock_seconds_title">Show seconds</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="left_clock">Left clock</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_date_position">Date position</string>
    <string name="status_bar_clock_auto_hide_title">Auto-hide</string>
    <string name="status_bar_clock_auto_hide_summary">Hide and display clock for regular intervals</string>
    <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
    <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
    <string name="battery_style_category_title">Battery icon</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="show_battery_estimate_title">Battery Estimates</string>
    <string name="show_battery_estimate_summary">Show Battery Estimates in QS Panel</string>
    <string name="battery_estimate_position_title">Battery Icon &amp; Estimates Position</string>
    <string name="battery_estimate_position_qsheader">QS Header</string>
    <string name="battery_estimate_position_qspanel">QS Panel</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_port">Portrait</string>
    <string name="status_bar_battery_style_q">Q style</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_big_circle">Big Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_big_dotted_circle">Big Dotted circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="use_old_mobiletype_title">Use old mobile signal</string>
    <string name="use_old_mobiletype_summary">Use the mobile icons from oreo and before\nSystemUI will restart</string>
    <string name="hide_lockscreen_indicator_display_title">Status text on bottom</string>
    <string name="hide_lockscreen_indicator_display_summary">Show charging information and unlock hints</string>
    <string name="hide_lockscreen_icon_title">Lock icon</string>
    <string name="hide_lockscreen_icon_summary">Show lock icon on the bottom</string>
    <string name="hide_notch_title">Hide notch</string>
    <string name="hide_notch_summary">If enabled it hides notch and fills in side gaps</string>
    <string name="carrier_category">Carrier Label</string>
    <string name="carrier_label_settings_summary">Customize the carrier label</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="show_carrier_disabled">Disabled</string>
    <string name="show_carrier_keyguard">Lockscreen only</string>
    <string name="show_carrier_statusbar">Statusbar only</string>
    <string name="show_carrier_enabled">Lockscreen &amp; statusbar</string>
    <string name="traffic_category">Network Traffic</string>
    <string name="network_traffic_state_title">Network traffic display</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="secure_lockscreen">Secure lockscreen options</string>
    <string name="lockscreen_qs_disabled_title">Disable quick settings when locked</string>
    <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings on secure lock screens</string>
    <string name="lock_screen_shortcuts_title">Lock screen shortcuts</string>
    <string name="lock_screen_shortcuts_summary">Manage lock screen bottom shortcuts</string>
    <string name="lockscreen_clock_title">Clock widget</string>
    <string name="lockscreen_clock_summary">Show the clock widget on the lockscreen</string>
    <string name="lockscreen_info_title">Items underneath the clock</string>
    <string name="lockscreen_info_summary">Show the date, weather, alarms and zen on the lockscreen</string>
    <string name="lockscreen_clock_selection_title">Clock style</string>
    <string name="lockscreen_cover_filter_title">Lockscreen album art filter</string>
    <string name="lock_screen_weather_title">Display weather</string>
    <string name="lock_screen_weather_summary">Display weather on lockscreen</string>
    <string name="weather_unit">Temperature unit</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
    <string name="lockscreen_charging_current_title">Charging info</string>
    <string name="lockscreen_charging_current_summary">Display negociated charger max current and voltage on lockscreen</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
    <string name="unlock_quick_unlock_control_title">Quick unlock</string>
    <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="lockscreen_colors">Lockscreen Colors</string>
    <string name="lockscreen_colors_summary">Change color of lockscreen widgets</string>
    <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
    <string name="lock_clock_font_title">Clock font options</string>
    <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
    <string name="lock_clock_font_dialog_title">Select lock clock font</string>
    <string name="lock_date_font_title">Date font options</string>
    <string name="lock_date_font_summary">Change the default font of the lockscreen date widget</string>
    <string name="lock_date_font_dialog_title">Select lock date font</string>
    <string name="lockdate_font_size_title">Date font size</string>
    <string name="lockclock_font_size_title">Clock font size</string>
    <string name="ls_colors_fonts_title">Colors, fonts and sizes</string>
</resources>