<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2015-2018 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:layout="@layout/tab_ui"
    android:title="@string/lockscreen_title" >

    <Preference
        android:title="@string/lock_screen_shortcuts_title"
        android:summary="@string/lock_screen_shortcuts_summary">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.LockscreenTunerActivity" />
    </Preference>

    <com.aosip.support.preference.SystemSettingSwitchPreference
        android:key="lockscreen_charging_current"
        android:title="@string/lockscreen_charging_current_title"
        android:summary="@string/lockscreen_charging_current_summary"
        android:defaultValue="false" />

    <com.aosip.support.preference.SystemSettingSwitchPreference
        android:key="show_lockscreen_indicator_display" 
        android:title="@string/hide_lockscreen_indicator_display_title" 
        android:summary="@string/hide_lockscreen_indicator_display_summary" 
        android:defaultValue="true" />

    <com.aosip.support.preference.SystemSettingSwitchPreference
        android:key="show_lockscreen_icon" 
        android:title="@string/hide_lockscreen_icon_title" 
        android:summary="@string/hide_lockscreen_icon_summary" 
        android:defaultValue="true" />

    <com.aosip.support.preference.SystemSettingSwitchPreference
        android:key="lockscreen_media_metadata"
        android:title="@string/media_art_title"
        android:summary="@string/media_art_summary"
        android:defaultValue="true" />

    <com.aosip.support.preference.SystemSettingListPreference
        android:key="lockscreen_album_art_filter"
        android:title="@string/lockscreen_cover_filter_title"
        android:entries="@array/lockscreen_cover_filter_entries"
        android:entryValues="@array/lockscreen_cover_filter_values"
        android:dependency="lockscreen_media_metadata"
        android:defaultValue="0" />

    <com.aosip.support.preference.SystemSettingSwitchPreference
        android:key="lockscreen_clock"
        android:title="@string/lockscreen_clock_title"
        android:summary="@string/lockscreen_clock_summary"
        android:defaultValue="true" />

    <com.aosip.support.preference.SystemSettingListPreference
        android:key="lockscreen_clock_selection"
        android:title="@string/lockscreen_clock_selection_title"
        android:entries="@array/lockscreen_clock_selection_entries"
        android:entryValues="@array/lockscreen_clock_selection_values"
        android:defaultValue="0" />

    <com.aosip.support.preference.SystemSettingSwitchPreference
        android:key="lockscreen_info"
        android:title="@string/lockscreen_info_title"
        android:summary="@string/lockscreen_info_summary"
        android:defaultValue="true" />

    <com.aosip.support.preference.SystemSettingSwitchPreference
        android:key="weather_lockscreen_enabled"
        android:title="@string/lock_screen_weather_title"
        android:dependency="lockscreen_info"
        android:summary="@string/lock_screen_weather_summary"
        android:defaultValue="true" />

    <com.aosip.support.preference.SystemSettingListPreference
        android:key="weather_lockscreen_unit"
        android:dialogTitle="@string/weather_unit"
        android:title="@string/weather_unit"
        android:summary="%s"
        android:entries="@array/weather_unit_entries"
        android:entryValues="@array/weather_unit_values"
        android:dependency="weather_lockscreen_enabled"
        android:defaultValue="@*android:integer/weather_lockscreen_default_unit" />

    <PreferenceCategory
        android:key="lockscreen_colors_fonts"
        android:title="@string/ls_colors_fonts_title" >

    <PreferenceScreen
    	android:key="lockscreen_colors"
       	android:title="@string/lockscreen_colors"
        android:summary="@string/lockscreen_colors_summary"
       	android:fragment="com.aosip.owlsnest.lockscreen.LockColors" />

    <ListPreference
        android:key="lock_clock_fonts"
        android:title="@string/lock_clock_font_title"
        android:dialogTitle="@string/lock_clock_font_dialog_title"
        android:entries="@array/lock_clock_fonts_entries"
        android:entryValues="@array/lock_clock_fonts_values"
        android:summary="@string/lock_clock_font_summary"
        android:persistent="false" />

    <ListPreference
        android:key="lock_date_fonts"
        android:title="@string/lock_date_font_title"
        android:dialogTitle="@string/lock_date_font_dialog_title"
        android:entries="@array/lock_clock_fonts_entries"
        android:entryValues="@array/lock_clock_fonts_values"
        android:summary="@string/lock_date_font_summary"
        android:persistent="false" />

    <com.aosip.support.preference.CustomSeekBarPreference
        android:key="lockclock_font_size"
        android:title="@string/lockclock_font_size_title"
        android:max="108"
        settings:min="50"
        settings:units="dp"
        android:persistent="false"
        android:defaultValue="68" />

    <com.aosip.support.preference.CustomSeekBarPreference
        android:key="lockdate_font_size"
        android:title="@string/lockdate_font_size_title"
        android:max="25"
        settings:min="10"
        settings:units="dp"
        android:defaultValue="16"
        android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="secure_lockscreen"
        android:title="@string/secure_lockscreen" >

        <com.aosip.support.preference.SystemSettingSwitchPreference
            android:key="lockscreen_qs_disabled"
            android:title="@string/lockscreen_qs_disabled_title"
            android:summary="@string/lockscreen_qs_disabled_summary"
            android:defaultValue="false" />

        <com.aosip.support.preference.SystemSettingSwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:defaultValue="true" />

        <com.aosip.support.preference.SecureSettingSwitchPreference
            android:key="face_auto_unlock"
            android:title="@string/face_auto_unlock_title"
            android:summary="@string/face_auto_unlock_summary"
            android:defaultValue="false" />

        <com.aosip.support.preference.SystemSettingSwitchPreference
            android:key="fp_unlock_keystore"
            android:title="@string/fp_unlock_keystore_title"
            android:summary="@string/fp_unlock_keystore_summary"
            android:defaultValue="false" /> 

        <com.aosip.support.preference.SystemSettingSwitchPreference
            android:key="lockscreen_quick_unlock_control"
            android:title="@string/unlock_quick_unlock_control_title"
            android:summary="@string/unlock_quick_unlock_control_summary"
            android:defaultValue="false" />

        <com.aosip.support.preference.SystemSettingSwitchPreference
            android:key="lockscreen_scramble_pin_layout"
            android:title="@string/unlock_scramble_pin_layout_title"
            android:summary="@string/unlock_scramble_pin_layout_summary"
            android:defaultValue="false" />

     </PreferenceCategory>


</PreferenceScreen>
